--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/lodash": "^4.17.16",
     "@types/react-calendar": "^3.9.0",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
